Cambios visuales carousel

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,28 +1,7 @@
 <app-menu></app-menu>
-<!-- <div id="carouselExampleControls" class="carousel slide container" data-ride="carousel" style="margin-top: 56px; height: 45%;">
-    <div class="carousel-inner" align="center">
-      <div class="carousel-item active">
-        <img class="img-fluid" src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8&w=1000&q=80" alt="First slide">
-      </div>
-      <div class="carousel-item">
-        <img class="img-fluid" src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8&w=1000&q=80" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="img-fluid" src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8&w=1000&q=80" alt="Third slide">
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div> -->
-<!-- <router-outlet></router-outlet> -->
 <div class="carousel-container">
-  <div id="carouselExampleControls" class="carousel slide container" data-mdb-ride="carousel" style="margin-top: 56px">
+  <div id="carouselExampleControls" class="carousel principal slide container" data-mdb-ride="carousel"
+    style="margin-top: 15px; background-color: white;">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="../../assets/img/slider/essalud1.jpg" class="d-block w-100" alt="Wild Landscape" />
@@ -47,25 +26,185 @@
 
 
 <div class="container">
-  <h4 style="color: #285698;font-size: 20px;font-family: 'Times New Roman', Times, serif">> Últimas noticias</h4>
-  <div class="d-flex justify-content-between">
-    <div style="width: 1111px;height: 300px;">
-      <img src="../../assets/img/noticias/noticias1.jpg" alt="noticia1" width="100%" height="80%">
-      <p class="noticia-tag">TUMBES ESSALUD ESSALUD TUMBES</p>
-      <p>EsSalud Tumbes entrega audífonos y devuelve audición a pacientes asegurados</p>
-      <p>Asegurados que presentan pérdida de audición son beneficiados con modernas prótesis que mejora su calidad de vida...</p>
-    </div>
-    <div class="mr-5 ml-5" style="width: 1111px;height: 300px;">
-      <img src="../../assets/img/noticias/noticias2.jpg" alt="noticia1" width="100%" height="80%">
-      <p class="noticia-tag">AREQUIPA ESSALUD ESSALUD AREQUIPA</p>
-      <p>EsSalud Arequipa: Hospital Seguín incrementó número de operaciones oncológicas de alta complejidad</p>
-      <p>Estas operaciones, pese a que no pararon durante la pandemia, se tuvieron que racionar de acuerdo con la situación de urgencia de cada paciente...</p>
-    </div>
-    <div style="width: 1111px;height: 300px;">
-      <img src="../../assets/img/noticias/noticias3.jpg" alt="noticia1" width="100%" height="80%">
-      <p class="noticia-tag">LAMBAYEQUE ESSALUD ESSALUD LAMBAYEQUE</p>
-      <p>EsSalud Lambayeque implementa timbre de llamado en el Servicio de Obstetricia</p>
-      <p> El dispositivo permite que las pacientes soliciten asistencia del personal de salud desde su cama...</p>
+  <div style="height: 640px">
+    <h4 class="mb-5 mt-3" style="color: #285698;font-size: 20px;font-family: sans-serif"> > Últimas
+      noticias</h4>
+    <div class="d-flex justify-content-between">
+      <div style="width: 1111px;height: 300px; cursor: pointer;">
+        <img src="../../assets/img/noticias/noticias1.jpg" alt="noticia1" width="100%" height="80%">
+        <div class="mt-2">
+          <p class="noticia-tag">TUMBES ESSALUD ESSALUD TUMBES</p>
+          <p class="noticia-title">EsSalud Tumbes entrega audífonos y devuelve audición a pacientes asegurados</p>
+          <p class="noticia-subtitle">Asegurados que presentan pérdida de audición son beneficiados con modernas
+            prótesis que mejora su calidad de
+            vida...</p>
+        </div>
+      </div>
+      <div class="mr-5 ml-5" style="width: 1111px;height: 300px;cursor: pointer;">
+        <img src="../../assets/img/noticias/noticias2.jpg" alt="noticia1" width="100%" height="80%">
+        <div class="mt-2">
+          <p class="noticia-tag">AREQUIPA ESSALUD ESSALUD AREQUIPA</p>
+          <p class="noticia-title">EsSalud Arequipa: Hospital Seguín incrementó número de operaciones oncológicas de
+            alta complejidad</p>
+          <p class="noticia-subtitle">Estas operaciones, pese a que no pararon durante la pandemia, se tuvieron que
+            racionar de acuerdo con la
+            situación de urgencia de cada paciente...</p>
+        </div>
+      </div>
+      <div style="width: 1111px;height: 300px; cursor: pointer;">
+        <img src="../../assets/img/noticias/noticias3.jpg" alt="noticia1" width="100%" height="80%">
+        <div class="mt-2">
+          <p class="noticia-tag">LAMBAYEQUE ESSALUD ESSALUD LAMBAYEQUE</p>
+          <p class="noticia-title">EsSalud Lambayeque implementa timbre de llamado en el Servicio de Obstetricia</p>
+          <p class="noticia-subtitle"> El dispositivo permite que las pacientes soliciten asistencia del personal de
+            salud desde su cama...</p>
+        </div>
+      </div>
     </div>
   </div>
+
+
+  <div style="text-align: center; height: 80px;">
+    <button class="ver-mas-noticias">Ver más noticias...</button>
+  </div>
+
+  <div style="height: 190px">
+    <div class="d-flex justify-content-between">
+      <div class="content">
+        <div class="categoria-card">
+          <img class="content-image" src="../../assets/img/categorias/categoria1.png">
+        </div>
+      </div>
+      <div class="content">
+        <div class="categoria-card">
+          <img class="content-image" src="../../assets/img/categorias/categoria2.png">
+        </div>
+      </div>
+      <div class="content">
+        <div class="categoria-card">
+          <img class="content-image" src="../../assets/img/categorias/categoria3.jpg">
+        </div>
+      </div>
+      <div class="content">
+        <div class="categoria-card">
+          <img class="content-image" src="../../assets/img/categorias/categoria4.png">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div style="height: 270px">
+    <div class="portada-content">
+      <img src="../../assets/img/portada/portada1.jpg" alt="" width="100%">
+    </div>
+  </div>
+
+  <div style="height: 380px">
+    <h4 class="mb-5" style="color: #285698;font-size: 20px;font-family: sans-serif"> > Acá encontrarás la información
+      que necesitas</h4>
+
+    <div id="carouselExampleIndicators2" class="carousel mini slide container" data-ride="carousel2"
+      style="background-color: white;">
+      <ol class="carousel-indicators" style="bottom: -50px">
+        <li data-target="#carouselExampleIndicators2" data-slide-to="0" class="active custom-indicator">
+        </li>
+        <li data-target="#carouselExampleIndicators2" class="custom-indicator" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators2" class="custom-indicator" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators2" class="custom-indicator" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators2" class="custom-indicator" data-slide-to="4"></li>
+        <li data-target="#carouselExampleIndicators2" class="custom-indicator" data-slide-to="5"></li>
+        <li data-target="#carouselExampleIndicators2" class="custom-indicator" data-slide-to="6"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="d-flex justify-content-between">
+            <img class="d-block" src="../../assets/img/slider-mini/mini1.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini2.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini3.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini4.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini5.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini6.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini7.png" alt="First slide" height="250px">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-flex justify-content-between">
+            <img class="d-block" src="../../assets/img/slider-mini/mini8.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini9.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini10.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini11.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini12.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini13.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini14.png" alt="First slide" height="250px">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-flex justify-content-between">
+            <img class="d-block" src="../../assets/img/slider-mini/mini15.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini16.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini17.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini18.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini19.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini20.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini21.png" alt="First slide" height="250px">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-flex justify-content-between">
+            <img class="d-block" src="../../assets/img/slider-mini/mini22.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini23.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini24.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini25.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini26.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini27.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini28.png" alt="First slide" height="250px">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-flex justify-content-between">
+            <img class="d-block" src="../../assets/img/slider-mini/mini29.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini30.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini31.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini32.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini33.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini34.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini35.png" alt="First slide" height="250px">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-flex justify-content-between">
+            <img class="d-block" src="../../assets/img/slider-mini/mini36.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini37.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini38.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini39.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini40.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini41.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini42.png" alt="First slide" height="250px">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-flex justify-content-between">
+            <img class="d-block" src="../../assets/img/slider-mini/mini43.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini44.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini45.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini46.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini47.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini48.png" alt="First slide" height="250px">
+            <img class="d-block" src="../../assets/img/slider-mini/mini49.png" alt="First slide" height="250px">
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators2" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+
 </div>
+
+<app-footer></app-footer>
