--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <router-outlet></router-outlet>
 
-<div class="redes-sociales-left d-flex flex-column position-absolute" style="left: 0; top: 40%">
+<div class="redes-sociales-left d-flex flex-column position-fixed" style="left: 0; top: 40%">
   <a class="pb-3 pl-3" href="https://www.facebook.com/"><i class="fab fa-facebook-f fa-xl"></i></a>
   <a class="pb-3 pl-3" href="https://www.instagram.com/"><i class="fab fa-instagram fa-xl"></i></a>
   <a class="pb-3 pl-3" href="https://www.youtube.com/"><i class="fab fa-youtube fa-xl"></i></a>
