--- a/src/app/index/index.component.css
+++ b/src/app/index/index.component.css
@@ -1,19 +1,86 @@
-.carousel-item > img {
+.carousel-item>img {
   width: 100%;
   height: 400px;
 }
 
-.carousel {
-  height: 415px
-}
-
-.carousel-container {
-  height: calc(100vh - 440px);
-}
-
-.noticia-tag{
+.noticia-tag {
   background-color: #075080de;
   color: white;
   padding: .45em .5em .4em;
-  font-size: .65em;
+  font-size: .68em;
+  font-weight: 500;
+  display: table-cell;
+}
+
+.noticia-title {
+  text-align: left;
+  font-size: 25px;
+  color: #075080;
+}
+
+.noticia-subtitle {
+  margin-bottom: -1rem;
+}
+
+.ver-mas-noticias {
+  background-color: #006FB9;
+  border-radius: 15px 15px 15px 15px;
+  font-size: 16px;
+  font-weight: 500;
+  color: white;
+  padding: 10px 30px;
+  border-color: #006FB9;
+  box-shadow: 0 0 0 0;
+  border: #006FB9;
+  box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 50%);
+}
+
+.content>img {
+  background-color: rgba(16, 46, 72, 0.6);
+  background-blend-mode: multiply;
+}
+
+.content {
+  position: relative;
+  width: 90%;
+  max-width: 400px;
+  margin: auto;
+  overflow: hidden;
+}
+
+.content-image {
+  width: 100%;
+}
+
+.categoria-card {
+  margin: 10px;
+  cursor: pointer;
+  border-radius: 20px 20px 20px 20px;
+  box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 50%);
+}
+
+.categoria-card>img {
+  border-radius: 20px 20px 20px 20px;
+}
+
+.portada-content {
+  margin: 10px;
+  cursor: pointer;
+  border-radius: 20px 20px 20px 20px;
+  box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 50%);
+}
+
+.portada-content>img {
+  border-radius: 20px 20px 20px 20px;
+}
+
+.custom-indicator {
+  background-color: black!important;
+  height: 0px!important;
+  background-clip: inherit!important;
+  border-radius: 50%!important;
+  width: 6px!important;
+  border-bottom: none!important;
+  border-top: 7px solid transparent !important;
+  margin-right: 10px!important;
 }
