--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,25 @@
 <router-outlet></router-outlet>
 
-<div class="redes-sociales-left d-flex flex-column position-fixed" style="left: 0; top: 40%">
-  <a class="pb-3 pl-3" href="https://www.facebook.com/"><i class="fab fa-facebook-f fa-xl"></i></a>
-  <a class="pb-3 pl-3" href="https://www.instagram.com/"><i class="fab fa-instagram fa-xl"></i></a>
-  <a class="pb-3 pl-3" href="https://www.youtube.com/"><i class="fab fa-youtube fa-xl"></i></a>
-  <a class="pb-3 pl-3" href="https://www.twitter.com/"><i class="fab fa-twitter fa-xl"></i></a>
+<div class="d-flex flex-column position-fixed" style="left: 0; top: 40%">
+  <div class="container-red facebook">
+    <i class="fab fa-facebook fa-xl"></i>
+  </div>
+  <div class="container-red instagram" href="#">
+    <i class="fab fa-instagram fa-xl"></i>
+  </div>
+  <div class="container-red youtube" href="#">
+    <i class="fab fa-youtube fa-xl"></i>
+  </div>
+  <div class="container-red twitter" href="#">
+    <i class="fab fa-twitter fa-xl"></i>
+  </div>
+  <div class="container-red linkedin" href="#">
+    <i class="fab fa-linkedin fa-xl"></i>
+  </div>
+  <div class="container-red flickr" href="#">
+    <i class="fab fa-flickr fa-xl"></i>
+  </div>
+  <div class="container-red tiktok" href="#">
+    <i class="fab fa-tiktok fa-xl"></i>
+  </div>
 </div>
