--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,21 +2,60 @@
   <div style="height: 20px; background-color: #e8e7e7;"></div>
   <div class="site-footer">
     <div class="row w-100 h-100">
-      <div class="col">
-        <div class="d-flex">
-          <div class="col">1</div>
-          <div class="col">2</div>
-          <div class="col">3</div>
-          <div class="col">4</div>
+      <div class="col d-flex">
+        <div class="col" style="display: table;">
+          <div
+            style="display: table-cell;vertical-align: middle;text-align: right;font-weight: 700;color:#54595f;font-size: 19px; line-height: 0.1em;font-family: sans-serif;">
+            <img src="../../../assets/img/escudo.png" class="img-fluid" height="70" width="70">
+          </div>
+        </div>
+        <div style="display: table;">
+          <div style="display: table-cell;vertical-align: middle">
+            <div style="width: 1px;height: 70px; border: 1px solid grey"></div>
+          </div>
+        </div>
+        <div class="col-2" style="display: table;">
+          <div style="display: table-cell;vertical-align: middle;width: 500px;font-size: 12px;">
+            <div style="min-height: 10em;display: table-cell;vertical-align: middle;">
+              Gobierno del <br>Perú
+            </div>
+          </div>
+        </div>
+        <div style="display: table;">
+          <div style="display: table-cell;vertical-align: middle">
+            <div style="width: 1px;height: 70px; border: 1px solid grey"></div>
+          </div>
+        </div>
+        <div class="col" style="display: table;">
+          <div style="display: table-cell;vertical-align: middle;width: 500px;font-size: 12px;">
+            <div style="min-height: 10em;display: table-cell;vertical-align: middle;">
+              Ministerio de Trabajo y Promoción del Empleo
+            </div>
+          </div>
+        </div>
+        <div style="display: table;">
+          <div style="display: table-cell;vertical-align: middle">
+            <div style="width: 1px;height: 70px; border: 1px solid grey"></div>
+          </div>
+        </div>
+        <div class="col" style="display: table;">
+          <div style="display: table-cell;vertical-align: middle;width: 500px;font-size: 12px;">
+            <div style="min-height: 10em;display: table-cell;vertical-align: middle;">
+              Seguro Social de Salud EsSalud
+            </div>
+          </div>
         </div>
       </div>
       <div class="col">
         <div class="d-flex h-100">
           <div class="col" style="display: table;">
-            <div style="display: table-cell;vertical-align: middle;text-align: right;font-weight: 700;color:#54595f;font-size: 19px; line-height: 0.1em;font-family: sans-serif;">www.essalud.gob.pe</div>
+            <div
+              style="display: table-cell;vertical-align: middle;text-align: right;font-weight: 700;color:#54595f;font-size: 19px; line-height: 0.1em;font-family: sans-serif;">
+              www.essalud.gob.pe</div>
           </div>
           <div class="col" style="display: table;">
-            <div style="display: table-cell;vertical-align: middle;font-size: 10px;color: #7a7a7a;font-family: sans-serif;font-weight: 400;">
+            <div
+              style="display: table-cell;vertical-align: middle;font-size: 10px;color: #7a7a7a;font-family: sans-serif;font-weight: 400;">
               <div style="border-left: 1px solid grey;height: 70px;display: table;">
                 <div style="display: table-cell;vertical-align: middle;padding: 10px;">
                   <p class="m-0">Sede Central: Av. Arenales N° 1402</p>
