--- a/src/app/index/index.component.css
+++ b/src/app/index/index.component.css
@@ -3,25 +3,6 @@
   height: 400px;
 }
 
-.noticia-tag {
-  background-color: #075080de;
-  color: white;
-  padding: .45em .5em .4em;
-  font-size: .68em;
-  font-weight: 500;
-  display: table-cell;
-}
-
-.noticia-title {
-  text-align: left;
-  font-size: 25px;
-  color: #075080;
-}
-
-.noticia-subtitle {
-  margin-bottom: -1rem;
-}
-
 .ver-mas-noticias {
   background-color: #006FB9;
   border-radius: 15px 15px 15px 15px;
@@ -35,34 +16,6 @@
   box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 50%);
 }
 
-.content>img {
-  background-color: rgba(16, 46, 72, 0.6);
-  background-blend-mode: multiply;
-}
-
-.content {
-  position: relative;
-  width: 90%;
-  max-width: 400px;
-  margin: auto;
-  overflow: hidden;
-}
-
-.content-image {
-  width: 100%;
-}
-
-.categoria-card {
-  margin: 10px;
-  cursor: pointer;
-  border-radius: 20px 20px 20px 20px;
-  box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 50%);
-}
-
-.categoria-card>img {
-  border-radius: 20px 20px 20px 20px;
-}
-
 .portada-content {
   margin: 10px;
   cursor: pointer;
@@ -74,13 +27,58 @@
   border-radius: 20px 20px 20px 20px;
 }
 
-.custom-indicator {
-  background-color: black!important;
-  height: 0px!important;
-  background-clip: inherit!important;
-  border-radius: 50%!important;
-  width: 6px!important;
-  border-bottom: none!important;
-  border-top: 7px solid transparent !important;
-  margin-right: 10px!important;
+
+
+
+/*  */
+
+
+/* #chat-button{
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  background-color: #212121;
+  color: #FFFFFF;
+  z-index: 9999;
 }
+
+.chat-box{
+  border: solid 1px #ccd4da;
+  border-radius: 10px;
+  width: 350px;
+  height: 350px;
+  padding: 10px;
+  position: fixed;
+  bottom: 60px;
+  right: 50px;
+  background-color: #E91E63;
+  padding: 10px;
+  z-index: 9999;
+}
+
+.mensajes{
+  height: 90%;
+  overflow-y: auto;
+}
+
+#send-button{
+  margin-left: 5px;
+  background-color: #536DFE;
+  color: #FFFFFF;
+}
+
+.mensaje-cliente{
+  display: flex;
+  justify-content: end;
+  background-color: #F8BBD0;
+  border-radius: 10px;
+  padding: 5px;
+}
+
+.mensaje-bot{
+  display: flex;
+  justify-content: start;
+  background-color: #FFFFFF;
+  border-radius: 10px;
+  padding: 5px;
+} */
