--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,3 +1,8 @@
+<div class="container">
+  <app-pre-menu></app-pre-menu>
+
+</div>
+
 <app-menu></app-menu>
 <div class="carousel-container">
   <div id="carouselExampleControls" class="carousel principal slide container" data-mdb-ride="carousel"
@@ -26,72 +31,14 @@
 
 
 <div class="container">
-  <div style="height: 640px">
-    <h4 class="mb-5 mt-3" style="color: #285698;font-size: 20px;font-family: sans-serif"> > Últimas
-      noticias</h4>
-    <div class="d-flex justify-content-between">
-      <div style="width: 1111px;height: 300px; cursor: pointer;">
-        <img src="../../assets/img/noticias/noticias1.jpg" alt="noticia1" width="100%" height="80%">
-        <div class="mt-2">
-          <p class="noticia-tag">TUMBES ESSALUD ESSALUD TUMBES</p>
-          <p class="noticia-title">EsSalud Tumbes entrega audífonos y devuelve audición a pacientes asegurados</p>
-          <p class="noticia-subtitle">Asegurados que presentan pérdida de audición son beneficiados con modernas
-            prótesis que mejora su calidad de
-            vida...</p>
-        </div>
-      </div>
-      <div class="mr-5 ml-5" style="width: 1111px;height: 300px;cursor: pointer;">
-        <img src="../../assets/img/noticias/noticias2.jpg" alt="noticia1" width="100%" height="80%">
-        <div class="mt-2">
-          <p class="noticia-tag">AREQUIPA ESSALUD ESSALUD AREQUIPA</p>
-          <p class="noticia-title">EsSalud Arequipa: Hospital Seguín incrementó número de operaciones oncológicas de
-            alta complejidad</p>
-          <p class="noticia-subtitle">Estas operaciones, pese a que no pararon durante la pandemia, se tuvieron que
-            racionar de acuerdo con la
-            situación de urgencia de cada paciente...</p>
-        </div>
-      </div>
-      <div style="width: 1111px;height: 300px; cursor: pointer;">
-        <img src="../../assets/img/noticias/noticias3.jpg" alt="noticia1" width="100%" height="80%">
-        <div class="mt-2">
-          <p class="noticia-tag">LAMBAYEQUE ESSALUD ESSALUD LAMBAYEQUE</p>
-          <p class="noticia-title">EsSalud Lambayeque implementa timbre de llamado en el Servicio de Obstetricia</p>
-          <p class="noticia-subtitle"> El dispositivo permite que las pacientes soliciten asistencia del personal de
-            salud desde su cama...</p>
-        </div>
-      </div>
-    </div>
-  </div>
+  <app-ultimas-noticias></app-ultimas-noticias>
 
 
   <div style="text-align: center; height: 80px;">
     <button class="ver-mas-noticias">Ver más noticias...</button>
   </div>
 
-  <div style="height: 190px">
-    <div class="d-flex justify-content-between">
-      <div class="content">
-        <div class="categoria-card">
-          <img class="content-image" src="../../assets/img/categorias/categoria1.png">
-        </div>
-      </div>
-      <div class="content">
-        <div class="categoria-card">
-          <img class="content-image" src="../../assets/img/categorias/categoria2.png">
-        </div>
-      </div>
-      <div class="content">
-        <div class="categoria-card">
-          <img class="content-image" src="../../assets/img/categorias/categoria3.jpg">
-        </div>
-      </div>
-      <div class="content">
-        <div class="categoria-card">
-          <img class="content-image" src="../../assets/img/categorias/categoria4.png">
-        </div>
-      </div>
-    </div>
-  </div>
+  <app-categorias></app-categorias>
 
   <div style="height: 270px">
     <div class="portada-content">
@@ -99,112 +46,33 @@
     </div>
   </div>
 
-  <div style="height: 380px">
-    <h4 class="mb-5" style="color: #285698;font-size: 20px;font-family: sans-serif"> > Acá encontrarás la información
-      que necesitas</h4>
-
-    <div id="carouselExampleIndicators2" class="carousel mini slide container" data-ride="carousel2"
-      style="background-color: white;">
-      <ol class="carousel-indicators" style="bottom: -50px">
-        <li data-target="#carouselExampleIndicators2" data-slide-to="0" class="active custom-indicator">
-        </li>
-        <li data-target="#carouselExampleIndicators2" class="custom-indicator" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators2" class="custom-indicator" data-slide-to="2"></li>
-        <li data-target="#carouselExampleIndicators2" class="custom-indicator" data-slide-to="3"></li>
-        <li data-target="#carouselExampleIndicators2" class="custom-indicator" data-slide-to="4"></li>
-        <li data-target="#carouselExampleIndicators2" class="custom-indicator" data-slide-to="5"></li>
-        <li data-target="#carouselExampleIndicators2" class="custom-indicator" data-slide-to="6"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="d-flex justify-content-between">
-            <img class="d-block" src="../../assets/img/slider-mini/mini1.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini2.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini3.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini4.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini5.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini6.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini7.png" alt="First slide" height="250px">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="d-flex justify-content-between">
-            <img class="d-block" src="../../assets/img/slider-mini/mini8.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini9.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini10.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini11.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini12.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini13.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini14.png" alt="First slide" height="250px">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="d-flex justify-content-between">
-            <img class="d-block" src="../../assets/img/slider-mini/mini15.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini16.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini17.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini18.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini19.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini20.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini21.png" alt="First slide" height="250px">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="d-flex justify-content-between">
-            <img class="d-block" src="../../assets/img/slider-mini/mini22.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini23.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini24.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini25.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini26.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini27.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini28.png" alt="First slide" height="250px">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="d-flex justify-content-between">
-            <img class="d-block" src="../../assets/img/slider-mini/mini29.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini30.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini31.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini32.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini33.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini34.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini35.png" alt="First slide" height="250px">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="d-flex justify-content-between">
-            <img class="d-block" src="../../assets/img/slider-mini/mini36.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini37.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini38.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini39.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini40.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini41.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini42.png" alt="First slide" height="250px">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="d-flex justify-content-between">
-            <img class="d-block" src="../../assets/img/slider-mini/mini43.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini44.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini45.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini46.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini47.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini48.png" alt="First slide" height="250px">
-            <img class="d-block" src="../../assets/img/slider-mini/mini49.png" alt="First slide" height="250px">
-          </div>
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators2" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div>
+  <app-informacion></app-informacion>
 
 </div>
+
+
+<!-- <button class="btn btn-lg rounded-circle" id="chat-button" (click)="chatboxView = !chatboxView">
+  <i class="fa fa-robot"></i>
+</button>
+
+<div class="chat-box" *ngIf="chatboxView">
+  <div class="mensajes">
+    <p class="mensaje-cliente">Hola</p>
+    <p class="mensaje-bot">Hola. Soy Alpha Health. ¿En qué puedo ayudarte?</p>
+    <p class="mensaje-cliente">Quisiera reservar una cita</p>
+  </div>
+  <div class="input">
+    <form>
+      <div class="d-flex justify-content-around align-items-center">
+        <input type="text" class="form-control">
+        <button class="btn rounded-circle" id="send-button">
+          <i class="fa fa-paper-plane"></i>
+        </button>
+      </div>
+    </form>
+  </div>
+</div> -->
+
+
 
 <app-footer></app-footer>
