some responsive design

--- a/src/app/components/informacion/informacion.component.html
+++ b/src/app/components/informacion/informacion.component.html
@@ -1,4 +1,4 @@
-<div style="height: 380px">
+<div style="margin-bottom: 80px">
   <h4 class="mb-5" style="color: #285698;font-size: 20px;font-family: sans-serif"> > Acá encontrarás la información
     que necesitas</h4>
 
