--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -34,13 +34,13 @@
   <app-ultimas-noticias></app-ultimas-noticias>
 
 
-  <div style="text-align: center; height: 80px;">
+  <div style="text-align: center; margin-bottom: 40px;">
     <button class="ver-mas-noticias">Ver más noticias...</button>
   </div>
 
   <app-categorias></app-categorias>
 
-  <div style="height: 270px">
+  <div style="margin-top: 50px; margin-bottom: 50px">
     <div class="portada-content">
       <img src="../../assets/img/portada/portada1.jpg" alt="" width="100%">
     </div>
