--- a/src/app/components/categorias/categorias.component.html
+++ b/src/app/components/categorias/categorias.component.html
@@ -1,24 +1,39 @@
-<div style="height: 190px">
+<div>
   <div class="d-flex justify-content-between">
-    <div class="content">
-      <div class="categoria-card">
-        <img class="content-image" src="../../assets/img/categorias/categoria1.png">
+    <div class="row">
+
+      <div class="col-12 col-md-6 col-lg-3">
+        <div class="content">
+          <div class="categoria-card">
+            <img class="content-image" src="../../assets/img/categorias/categoria1.png">
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="content">
-      <div class="categoria-card">
-        <img class="content-image" src="../../assets/img/categorias/categoria2.png">
+
+      <div class="col-12 col-md-6 col-lg-3">
+        <div class="content">
+          <div class="categoria-card">
+            <img class="content-image" src="../../assets/img/categorias/categoria2.png">
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="content">
-      <div class="categoria-card">
-        <img class="content-image" src="../../assets/img/categorias/categoria3.jpg">
+
+      <div class="col-12 col-md-6 col-lg-3">
+        <div class="content">
+          <div class="categoria-card">
+            <img class="content-image" src="../../assets/img/categorias/categoria3.jpg">
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="content">
-      <div class="categoria-card">
-        <img class="content-image" src="../../assets/img/categorias/categoria4.png">
+
+      <div class="col-12 col-md-6 col-lg-3">
+        <div class="content">
+          <div class="categoria-card">
+            <img class="content-image" src="../../assets/img/categorias/categoria4.png">
+          </div>
+        </div>
       </div>
+
     </div>
   </div>
 </div>
