implementacion conocenos y cambios css

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -41,7 +41,7 @@
         <div class="col" style="display: table;">
           <div style="display: table-cell;vertical-align: middle;width: 500px;font-size: 12px;">
             <div style="min-height: 10em;display: table-cell;vertical-align: middle;">
-              Seguro Social de Salud EsSalud
+              Seguro Privado de Salud
             </div>
           </div>
         </div>
@@ -51,7 +51,7 @@
           <div class="col" style="display: table;">
             <div
               style="display: table-cell;vertical-align: middle;text-align: right;font-weight: 700;color:#54595f;font-size: 19px; line-height: 0.1em;font-family: sans-serif;">
-              www.essalud.gob.pe</div>
+              www.clinicainternacional.com.pe</div>
           </div>
           <div class="col" style="display: table;">
             <div
