--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,9 +1,13 @@
 <div class="container">
-  <app-pre-menu></app-pre-menu>
-
+  <app-menu></app-menu>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 </div>
 
-<app-menu></app-menu>
+
 <div class="carousel-container">
   <div id="carouselExampleControls" class="carousel principal slide container" data-mdb-ride="carousel"
     style="margin-top: 15px; background-color: white;">
@@ -42,12 +46,13 @@
 
   <div style="margin-top: 50px; margin-bottom: 50px">
     <div class="portada-content">
-      <img src="../../assets/img/portada/portada1.jpg" alt="" width="100%">
+      <img src="../../assets/img/portada/banner-2.png" alt="" width="100%">
     </div>
   </div>
 
   <app-informacion></app-informacion>
 
+  <app-pre-menu></app-pre-menu>
 </div>
 
 
