--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -2,8 +2,8 @@
   <img src="../../../assets/img/header-logo-blanco.png" style="width: 150px;" class="logo" />
   <nav>
     <ul>
-      <li><a href="" class="logo">Inicio</a></li>
-      <li><a href="/conocenos" class="logo">Conocenos</a></li>
+      <li><a routerLink="/" class="logo">Inicio</a></li>
+      <li><a routerLink="/conocenos" class="logo">Conocenos</a></li>
     </ul>
   </nav>
 </header>
